# Refactored-DuoFormer

./: .dockerignore  .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLOUD_ACCESS_GUIDE.md  DEPENDENCIES.md  GETTING_STARTED.md  LICENSE  PROJECT_STRUCTURE.md  README.md  REPO_HOUSEKEEPING_PR.md  RISK_MANUAL_REVIEW.md  SECURITY.md  SECURITY_AUDIT.md  audit_report.json  git_actions.py  mypy.ini  pyproject.toml  requirements.in  requirements.txt  setup_environment.py  train.py
.github/: CODEOWNERS
.github/workflows/: ci-cd.yml  test-environment.yml  type-check.yml
archive/: Dockerfile.jupyter  demo_duoformer.ipynb
archive/config/: __init__.py  model_config.py
archive/models/: backbone.py  model_wo_extra_params.py  multi_vision_transformer.py  resnet50ssl.py  scale_attention.py
config/: default_config.yaml  lightweight_config.yaml  model_config.py
diagnostics/: audit_baseline.json  black-check.txt  findings.json  git-status-before.txt  ignored_candidates.txt  ignored_files.json  mypy-src.txt  mypy.txt  pytest-before.txt  requirements-before.txt  secrets-scan.json
docs/: CODE_REVIEW_REPORT.md  CONTRIBUTING.md  DOCUMENTATION_INDEX.md  FIXES_APPLIED.md  INSTALLATION.md  QUICK_FIX_REFERENCE.md  README.md  TESTING_GUIDE.md  TROUBLESHOOTING.md
examples/: __init__.py  demo_robust.py
infrastructure/docker/: docker-compose.yml
models/: __init__.py  model.py  model_wo_extra_params.py  multi_vision_transformer.py  projection_head.py  scale_attention.py
notebooks/examples/: README.txt  demo_duoformer.ipynb  example_usage.py
scripts/: README.txt  __init__.py  apply_fixes.sh  check_system.py  health_check.py  scan_secrets_regex.sh  validate_data.py  verify_installation.py
src/duoformer/: __init__.py  py.typed
src/duoformer/config/: default_config.yaml  model_config.py  performance_config.yaml
src/duoformer/data/: __init__.py
src/duoformer/data/loaders/: __init__.py  dataset.py
src/duoformer/models/: __init__.py  duoformer_model.py  model_wo_extra_params.py
src/duoformer/models/attention/: multiscale_attn.py  scale_attention.py
src/duoformer/models/backbone/: __init__.py
src/duoformer/models/projection/: projection_head.py
src/duoformer/models/transformer/: multi_vision_transformer.py
src/duoformer/training/: __init__.py  train.py
src/duoformer/training/trainer/: __init__.py  trainer.py
src/duoformer/utils/: __init__.py
src/duoformer/utils/device/: __init__.py
src/duoformer/utils/exceptions/: __init__.py  exceptions.py
src/duoformer/utils/logging/: __init__.py  logging_config.py
src/duoformer/utils/platform/: __init__.py  platform_utils.py
tests/: README.txt  __init__.py  run_tests.py
tests/fixtures/: __init__.py  mock_data.py
tests/integration/: __init__.py  test_full_models.py  test_training_pipeline.py
tests/unit/: __init__.py  test_config.py  test_fix_dataset_split.py  test_lightweight.py  test_utils.py
tools/devops/: install_jupyter_extensions.py  setup_environment.py  start_jupyter_cloud.py
tools/testing/: check_system.py  health_check.py  verify_installation.py
utils/: __init__.py  dataset.py  device_utils.py  platform_utils.py  trainer.py
